# tensordiagram

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-mcp.yml  publish.yml
doc/: guide.ipynb
mcp/: Dockerfile  README.md  README_TESTING.md  __init__.py  docker-compose.yml  pyproject.toml  quick_test.py  server.py
tensordiagram/: __init__.py  core.py  types.py  utils.py
tests/: conftest.py  generate_references.py  test_rendering.py  test_tensor_diagram.py  test_wrapped_tensor.py
typings/chalk/: __init__.pyi  style.pyi  transform.pyi  types.pyi
