[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensordiagram"
version = "0.1.0"
description = "Render diagrams for torch, jax, tensorflow, etc. tensors for understanding and debugging."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Hardik Vala"},
]

dependencies = [
    "chalk-diagrams>=0.2.2",
    "numpy",
]

[project.optional-dependencies]
# Rendering options
cairo = ["pycairo"]  # for png rendering
svg = ["cairosvg"]  # for svg to png conversion
tikz = ["pylatex", "latextools"]   # for LaTeX/TikZ output
# Convenience groups
all = ["pycairo", "cairosvg", "pylatex", "latextools"]
# Development
dev = [
    "pycairo",
    "cairosvg",
    "pylatex",
    "latextools",
    # testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "Pillow>=10.0.0"
]

[project.urls]
Homepage = "https://github.com/hardik-vala/tensordiagram"
Repository = "https://github.com/hardik-vala/tensordiagram"
Issues = "https://github.com/hardik-vala/tensordiagram/issues"

[tool.setuptools]
packages = ["tensordiagram"]
