[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensordiagram"
version = "0.2.0"
description = "Visualize torch, jax, tensorflow, etc. tensors for understanding and debugging."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Hardik Vala"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "chalk-diagrams>=0.2.2",
    "numpy",
]

[project.optional-dependencies]
# Rendering options
cairo = ["pycairo", "Pillow>=10.0.0"]  # for png rendering and Image objects
svg = ["cairosvg", "Pillow>=10.0.0"]  # for svg to png conversion and Image objects
tikz = ["pylatex", "latextools"]   # for LaTeX/TikZ output
# Convenience groups
all = ["pycairo", "cairosvg", "pylatex", "latextools", "Pillow>=10.0.0"]
# Development
dev = [
    "pycairo",
    "cairosvg",
    "pylatex",
    "latextools",
    # testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "Pillow>=10.0.0"
]

[project.urls]
Homepage = "https://github.com/hardik-vala/tensordiagram"
Repository = "https://github.com/hardik-vala/tensordiagram"
Issues = "https://github.com/hardik-vala/tensordiagram/issues"

[tool.setuptools]
packages = ["tensordiagram"]
